--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -924,6 +924,132 @@ parts
 
 /* -------------------------
 
+form-box
+
+---------------------------- */
+#form-box dl {
+	width: 100%;
+	margin: 0;
+	padding: 20px 0 15px;
+	display: flex;
+	border-bottom: var(--gray) 1px solid;
+}
+
+#form-box dt {
+	box-sizing: border-box;
+	width: 260px;
+	padding: 6px;
+	display: flex;
+	align-items: baseline;
+}
+
+#form-box .required {
+	position: relative;
+}
+
+#form-box .required::after {
+	content: '必須';
+	position: relative;
+	padding: 4px 5px;
+	display: inline-block;
+	font-size: 1.4rem;
+	line-height: 1;
+	margin-left: 10px;
+	text-align: center;
+	vertical-align: middle;
+	background-color: var(--red);
+	color: #fff;
+}
+
+#form-box dt span+span {
+	box-sizing: border-box;
+	width: calc(100% - (2.5em + 10px));
+	padding-left: 8px;
+	line-height: 1.4;
+	overflow-wrap: break-word !important;
+	display: block;
+	float: left;
+}
+
+#form-box dd {
+	box-sizing: border-box;
+	flex: 1;
+	margin-left: 0;
+	padding: 0 5px;
+}
+
+#form-box input[type='text'],
+#form-box input[type='password'],
+#form-box input[type='email'],
+#form-box input[type='tel'],
+#form-box input[type='url'],
+#form-box input[type='number'],
+#form-box textarea {
+	box-sizing: border-box;
+	padding: 2px;
+	width: 100%;
+	background: #f5f5f5;
+	border: 1px solid #bebebe;
+	display: block;
+}
+
+#form-box input:hover,
+#form-box input:focus,
+#form-box textarea {
+	outline: none;
+}
+
+#form-box input[type='radio']:hover,
+#form-box input[type='submit']:hover {
+	cursor: pointer;
+}
+
+#form-box select {
+	appearance: none;
+}
+
+#form-box select::-ms-expand {
+	display: none;
+}
+
+#form-box input[type='number'] {
+	width: 240px;
+}
+
+#form-box input[name='your-zip'] {
+	box-sizing: border-box;
+	width: 200px;
+}
+
+#form-box input[name='your-address'] {
+	margin-top: 10px;
+}
+
+#form-box .consent,
+#form-box .submit {
+	text-align: center;
+	margin-top: 30px;
+}
+
+#form-box .consent a {
+	text-decoration: underline;
+}
+
+@media screen and (max-width: 767px) {
+
+	#form-box input[type='text'],
+	#form-box input[type='password'],
+	#form-box input[type='email'],
+	#form-box input[type='tel'],
+	#form-box input[type='url'],
+	#form-box input[type='number'],
+	#form-box textarea {
+		width: 100%;
+	}
+}
+
+/* -------------------------
+
 module
 
 ---------------------------- */
