--- a/src/components/RecruitEntry.astro
+++ b/src/components/RecruitEntry.astro
@@ -1,5 +1,4 @@
-<!-- ---
-import strengthImage01 from '../images/page/business/strength_01.png';
+---
 ---
 <section id="recruit-entry">
 	<div class="sec-inner pt0">
@@ -8,117 +7,39 @@ import strengthImage01 from '../images/page/business/strength_01.png';
 				<h2 class="sec-ttl">entry</h2>
 				<p class="sec-sub-ttl">エントリー</p>
 			</div>
-			<div class="content-box">
-				<div class="contact-wrapper">
-					<div class="contact-box">
-<div class="wpcf7 js" id="wpcf7-f98-p71-o1" lang="ja" dir="ltr">
-<div class="screen-reader-response"><p role="status" aria-live="polite" aria-atomic="true"></p> <ul></ul></div>
-<form action="/recruit/#wpcf7-f98-p71-o1" method="post" class="wpcf7-form init" aria-label="コンタクトフォーム" novalidate="novalidate" data-status="init">
-<div style="display: none;">
-<input type="hidden" name="_wpcf7" value="98">
-<input type="hidden" name="_wpcf7_version" value="5.8">
-<input type="hidden" name="_wpcf7_locale" value="ja">
-<input type="hidden" name="_wpcf7_unit_tag" value="wpcf7-f98-p71-o1">
-<input type="hidden" name="_wpcf7_container_post" value="71">
-<input type="hidden" name="_wpcf7_posted_data_hash" value="">
-</div>
-<div class="contact-box">
-<div id="form-box">
-<dl>
-	<dt>
-		<p>お問い合わせ種別<span class="required">（必須）</span>
-		</p>
-	</dt>
-	<dd>
-		<p><span class="wpcf7-form-control-wrap your-radio by-theme-function" data-name="your-radio"><span class="wpcf7-form-control wpcf7-radio"><span class="wpcf7-list-item first"><label><input type="radio" name="your-radio" value="新卒採用"><span class="wpcf7-list-item-label">新卒採用</span></label></span><span class="wpcf7-list-item"><label><input type="radio" name="your-radio" value="中途採用"><span class="wpcf7-list-item-label">中途採用</span></label></span><span class="wpcf7-list-item last"><label><input type="radio" name="your-radio" value="採用に関するお問い合わせ"><span class="wpcf7-list-item-label">採用に関するお問い合わせ</span></label></span></span></span>
-		</p>
-	</dd>
-</dl>
-<dl>
-	<dt>
-		<p>氏名<span class="required">（必須）</span>
-		</p>
-	</dt>
-	<dd>
-		<p><span class="wpcf7-form-control-wrap your-name by-theme-function" data-name="your-name"><input size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" aria-required="true" aria-invalid="false" value="" type="text" name="your-name"></span>
-		</p>
-	</dd>
-</dl>
-<dl>
-	<dt>
-		<p>ふりがな<span class="required">（必須）</span>
-		</p>
-	</dt>
-	<dd>
-		<p><span class="wpcf7-form-control-wrap your-kana by-theme-function" data-name="your-kana"><input size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" aria-required="true" aria-invalid="false" value="" type="text" name="your-kana"></span>
-		</p>
-	</dd>
-</dl>
-<dl>
-	<dt>
-		<p>住所<span class="required">（必須）</span>
-		</p>
-	</dt>
-	<dd>
-		<p><span class="wpcf7-form-control-wrap your-zip by-theme-function" data-name="your-zip"><input size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required zip" aria-required="true" aria-invalid="false" value="" type="text" name="your-zip" onkeyup="AjaxZip3.zip2addr(this,'','your-address','your-address');"></span><br>
-<span class="wpcf7-form-control-wrap your-address by-theme-function" data-name="your-address"><input size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required your-address" aria-required="true" aria-invalid="false" value="" type="text" name="your-address"></span>
-		</p>
-	</dd>
-</dl>
-<dl>
-	<dt>
-		<p>メールアドレス<span class="required">（必須）</span>
-		</p>
-	</dt>
-	<dd>
-		<p><span class="wpcf7-form-control-wrap your-email by-theme-function" data-name="your-email"><input size="40" class="wpcf7-form-control wpcf7-email wpcf7-validates-as-required wpcf7-text wpcf7-validates-as-email" aria-required="true" aria-invalid="false" value="" type="email" name="your-email"></span>
-		</p>
-	</dd>
-</dl>
-<dl>
-	<dt>
-		<p>電話番号<span class="required">（必須）</span>
-		</p>
-	</dt>
-	<dd>
-		<p><span class="wpcf7-form-control-wrap your-tel by-theme-function" data-name="your-tel"><input size="40" class="wpcf7-form-control wpcf7-tel wpcf7-validates-as-required wpcf7-text wpcf7-validates-as-tel" aria-required="true" aria-invalid="false" value="" type="tel" name="your-tel"></span>
-		</p>
-	</dd>
-</dl>
-<dl>
-	<dt>
-		<p>備考・メッセージ<span class="required">（必須）</span>
-		</p>
-	</dt>
-	<dd>
-		<p><span class="wpcf7-form-control-wrap your-content by-theme-function" data-name="your-content"><textarea cols="40" rows="10" class="wpcf7-form-control wpcf7-textarea wpcf7-validates-as-required" aria-required="true" aria-invalid="false" name="your-content"></textarea></span>
-		</p>
-	</dd>
-</dl>
-<dl>
-	<dt>
-	</dt>
-	<dd>
-	</dd>
-</dl>
-</div>
-<div id="consent-box">
-<p><span class="wpcf7-form-control-wrap consent-check by-theme-function" data-name="consent-check"><span class="wpcf7-form-control wpcf7-acceptance"><span class="wpcf7-list-item"><label><input type="checkbox" name="consent-check" value="1" aria-invalid="false"><span class="wpcf7-list-item-label"><a href="/privacy-policy/">プライバシーポリシー</a>に同意しました。<span class="required">（必須）</span></span></label></span></span></span>
-</p>
-</div>
-<div id="submit-box">
-<p><input class="wpcf7-form-control wpcf7-submit has-spinner btn-tertiary" type="submit" value="送信する" disabled=""><span class="wpcf7-spinner"></span>
-</p>
-</div>
-</div><p style="display: none !important;"><label>Δ<textarea name="_wpcf7_ak_hp_textarea" cols="45" rows="8" maxlength="100"></textarea></label><input type="hidden" id="ak_js_1" name="_wpcf7_ak_js" value="1695992339096"><script>document.getElementById( "ak_js_1" ).setAttribute( "value", ( new Date() ).getTime() );</script></p><div class="wpcf7-response-output" aria-hidden="true"></div>
-</form>
-</div>
+			<div class="contact-box">
+				<form action="https://ssgform.com/s/hOOcV8reaXzU" method="POST">
+					<div id="fields-box">
+						<dl>
+							<dt><span>氏名</span><span class="required">必須</span></dt>
+							<dd><input value="" type="text" name="your-name"></dd>
+						</dl>
+						<dl>
+							<dt><span>ふりがな</span><span class="required">必須</span></dt>
+							<dd><input value="" type="text" name="your-kana"></dd>
+						</dl>
+						<dl>
+							<dt><span>住所</span><span class="required">必須</span></dt>
+							<dd><input value="" type="text" name="your-zip"><br><input value="" type="text" name="your-address"></span></dd>
+						</dl>
+						<dl>
+							<dt><span>メールアドレス</span><span class="required">必須</span></dt>
+							<dd><input value="" type="email" name="your-email"></dd>
+						</dl>
+						<dl>
+							<dt><span>電話番号</span><span class="required">必須</span></dt>
+							<dd><input value="" type="tel" name="your-tel"></dd>
+						</dl>
+						<dl>
+							<dt><span>備考・メッセージ</span><span class="required">必須</span></dt>
+							<dd><textarea cols="40" rows="10" name="your-content"></textarea></dd>
+						</dl>
 					</div>
-				</div>
+					<div id="submit-box">
+						<button type="submit">送信する</button>
+					</div>
+				</form>
 			</div>
 		</div>
 	</div>
 </section>
-<style>
-
-</style> -->
