Edit: form components to aim for commonality form fields

--- a/src/components/ModuleForm.astro
+++ b/src/components/ModuleForm.astro
@@ -1,48 +1,30 @@
-<div id="form-box">
-	<form method="POST" action="https://ssgform.com/s/IwCQKp0HXEIE">
-		<div class="fields">
-			<dl>
-				<dt class="required"><span>氏名</span></dt>
-				<dd>
-					<input type="text" name="your-name" required="required" placeholder="山田太朗">
-				</dd>
-			</dl>
-			<dl>
-				<dt class="required"><span>ふりがな</span></dt>
-				<dd><input type="text" name="your-kana" required="required" placeholder="やまだたろう"></dd>
-			</dl>
-			<dl>
-				<dt class="required"><span>住所</span></dt>
-				<dd><input type="text" name="your-zip" required="required" placeholder="000-0000"><input type="text" name="your-address" required="required" placeholder="新潟県新潟市"></span></dd>
-			</dl>
-			<dl>
-				<dt class="required"><span>メールアドレス</span></dt>
-				<dd><input type="email" name="your-email" required="required" placeholder="xxx@gmail.com"></dd>
-			</dl>
-			<dl>
-				<dt class="required"><span>電話番号</span></dt>
-				<dd><input type="tel" name="your-tel" required="required" placeholder="000-0000-0000"></dd>
-			</dl>
-			<dl>
-				<dt class="required"><span>備考・メッセージ</span></dt>
-				<dd><textarea cols="40" rows="10" name="your-content" required="required" placeholder="ご入力ください"></textarea></dd>
-			</dl>
-		</div>
-		<p class="consent" data-name="consent-check">
-			<span class="wpcf7-acceptance">
-				<span class="wpcf7-list-item">
-					<label>
-						<input type="checkbox" name="consent-check" value="1">
-						<span class="wpcf7-list-item-label">
-							<a href="/privacy-policy/">プライバシーポリシー</a>に同意しました。
-							<span class="required">（必須）</span>
-						</span>
-					</label>
-				</span>
-			</span>
-		</p>
-		<div class="submit">
-			<input class="btn-tertiary" type="submit" value="送信する">
-		</div>
-	</form>
+<div class="fields">
+	<dl>
+		<dt class="required">氏名</dt>
+		<dd><input type="text" name="your-name" required="required" placeholder="山田太朗"></dd>
+	</dl>
+	<dl>
+		<dt class="required">ふりがな</dt>
+		<dd><input type="text" name="your-kana" required="required" placeholder="やまだたろう"></dd>
+	</dl>
+	<dl>
+		<dt class="required">住所</dt>
+		<dd><input type="text" name="your-zip" required="required" placeholder="000-0000"><input type="text" name="your-address" required="required" placeholder="新潟県新潟市"></span></dd>
+	</dl>
+	<dl>
+		<dt class="required">メールアドレス</dt>
+		<dd><input type="email" name="your-email" required="required" placeholder="xxx@gmail.com"></dd>
+	</dl>
+	<dl>
+		<dt class="required">電話番号</dt>
+		<dd><input type="tel" name="your-tel" required="required" placeholder="000-0000-0000"></dd>
+	</dl>
+	<dl>
+		<dt class="required">備考・メッセージ</dt>
+		<dd><textarea cols="40" rows="10" name="your-content" required="required" placeholder="ご入力ください"></textarea></dd>
+	</dl>
+</div>
+<p class="consent"><a href="/privacy-policy/">プライバシーポリシー</a>に同意しました。</p>
+<div class="submit">
+	<button class="btn-tertiary" type="submit">送信する</button>
 </div>
