Edit: each page section names

--- a/src/pages/recruit.astro
+++ b/src/pages/recruit.astro
@@ -13,7 +13,7 @@ import RecruitInterview from "@components/RecruitInterview.astro";
 import RecruitEnvironment from "@components/RecruitEnvironment.astro";
 import RecruitData from "@components/RecruitData.astro";
 import RecruitRequirement from "@components/RecruitRequirement.astro";
-import RecruitEntry from "@components/RecruitEntry.astro";
+import RecruitForm from "@components/RecruitForm.astro";
 ---
 <html lang="ja">
 	<Head />
@@ -28,7 +28,7 @@ import RecruitEntry from "@components/RecruitEntry.astro";
 				<RecruitEnvironment />
 				<RecruitData />
 				<RecruitRequirement />
-				<RecruitEntry />
+				<RecruitForm />
 			</main>
 			<Footer />
 		</div>
