--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -7,7 +7,7 @@ import Header from "@components/Header.astro";
 import Footer from "@components/Footer.astro";
 // section
 import PostMv from "@components/ModuleMv.astro";
-import ContactForm from "@components/ModuleForm.astro";
+import ContactForm from "@components/ContactForm.astro";
 ---
 <html lang="ja">
 	<Head />
@@ -16,29 +16,9 @@ import ContactForm from "@components/ModuleForm.astro";
 			<Header />
 			<main>
 				<PostMv />
-				<section>
-					<div class="sec-inner">
-						<div class="content-width">
-							<div class="contact-wrapper">
-								<ContactForm />
-							</div>
-						</div>
-					</div>
-				</section>
+				<ContactForm />
 			</main>
 			<Footer />
 		</div>
 	</body>
 </html>
-<style>
-.contact-wrapper {
-	background-color: var(--gray-bg);
-	padding: 90px;
-}
-
-@media screen and (max-width: 768px) {
-	.contact-wrapper {
-		padding: 30px 10px;
-	}
-}
-</style>
