Change: wrapper class to id

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -16,7 +16,7 @@ import AboutAccess from "@components/AboutAccess.astro";
 <html lang="ja">
 	<Head />
 	<body>
-		<div class="wrapper">
+		<div id="wrapper">
 			<Header />
 			<main>
 				<PageMv />
