--- a/src/pages/blog/[blogId].astro
+++ b/src/pages/blog/[blogId].astro
@@ -25,7 +25,7 @@ const blog = await getBlogDetail(blogId as string);
 <html lang="ja">
 	<Head />
 	<body>
-		<div class="wrapper">
+		<div id="wrapper">
 			<Header />
 			<main>
 
