--- a/src/pages/business.astro
+++ b/src/pages/business.astro
@@ -17,7 +17,7 @@ import BusinessQuality from "@components/BusinessQuality.astro";
 <html lang="ja">
 	<Head />
 	<body>
-		<div class="wrapper">
+		<div id="wrapper">
 			<Header />
 			<main>
 				<PageMv />
