--- a/src/pages/privacy-policy.astro
+++ b/src/pages/privacy-policy.astro
@@ -12,7 +12,7 @@ import PostMv from "@components/ModuleMv.astro";
 <html lang="ja">
 	<Head />
 	<body>
-		<div class="wrapper">
+		<div id="wrapper">
 			<Header />
 			<main>
 				<PostMv />
