--- a/src/pages/recruit.astro
+++ b/src/pages/recruit.astro
@@ -18,7 +18,7 @@ import RecruitForm from "@components/RecruitForm.astro";
 <html lang="ja">
 	<Head />
 	<body>
-		<div class="wrapper">
+		<div id="wrapper">
 			<Header />
 			<main>
 				<PageMv />
