--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -12,7 +12,7 @@ const response = await getBlogs({ fields: ["id", "title", "publishedAt", "catego
 <html lang="ja">
 	<Head />
 	<body>
-		<div class="wrapper">
+		<div id="wrapper">
 			<Header />
 			<main>
 
