--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -12,7 +12,7 @@ import ContactForm from "@components/ContactForm.astro";
 <html lang="ja">
 	<Head />
 	<body>
-		<div class="wrapper">
+		<div id="wrapper">
 			<Header />
 			<main>
 				<PostMv />
