Edit: footer stylesheet

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -349,6 +349,11 @@ const optimizedBgImg02 = await getImage({src: ctaImg02});
 	#footer .menu-list .sub-menu {
 		margin-bottom: 20px;
 	}
+
+	#footer .to-top {
+		right: 40px;
+		bottom: -30px;
+	}
 }
 
 </style>
