--- a/src/components/HomeNews.astro
+++ b/src/components/HomeNews.astro
@@ -62,6 +62,7 @@
 }
 
 @media screen and (max-width: 767px) {
+
 	#home-news .sec-ttl-wrapper {
 		width: 100%;
 	}
@@ -70,6 +71,10 @@
 		margin-top: 60px;
 		flex-direction: row;
 		justify-content: center;
+	}
+
+	#home-news .content-box {
+		width: 100%;
 	}
 }
 </style>
