Editing: some pages for trying to move slider etc

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -48,7 +48,7 @@ const optimizedBgImg02 = await getImage({src: ctaImg02});
 	<div class="f-inner">
 		<div class="content-width">
 			<div class="info-area">
-				<a href="/" class="img-box">
+				<a href="https://github.com/yokokida" class="img-box">
 					<Image
 						src={logo}
 						alt="株式会社"
