--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -88,7 +88,7 @@ import logo from '../images/common/logo_01.svg';
 					height="31"
 				/>
 			</div>
-			<p class="address">〒950-2032<br>新潟県新潟市西区的場流通1丁目3-23<br>TEL. <a href="tel:025-269-1111" class="tel">025-269-1111</a> / FAX. 025-269-1118</p>
+			<p class="address">〒000-0000<br>新潟県新潟市<br>TEL. <a href="tel:00000000000" class="tel">00000000000</a> / FAX. 025-269-1118</p>
 		</div>
 	</div>
 </header>
