Tweak: hide HomeMv component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Head from "@components/Head.astro";
 import Header from "@components/Header.astro";
 import Footer from "@components/Footer.astro";
 // section
-import HomeMv from "@components/HomeMv.astro";
+// import HomeMv from "@components/HomeMv.astro";
 import HomeAbout from "@components/HomeAbout.astro";
 import HomeBusiness from "@components/HomeBusiness.astro";
 import HomeNews from "@components/HomeNews.astro";
@@ -19,7 +19,7 @@ import HomeRecruit from "@components/HomeRecruit.astro";
 		<div id="wrapper">
 			<Header />
 			<main>
-				<HomeMv client:load />
+				<!-- <HomeMv client:load /> -->
 				<HomeAbout />
 				<HomeBusiness />
 				<HomeNews />
