--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Head from "@components/Head.astro";
 import Header from "@components/Header.astro";
 import Footer from "@components/Footer.astro";
 // section
-// import HomeMv from "@components/HomeMv.astro";
+import HomeMv from "@components/HomeMv.astro";
 import HomeAbout from "@components/HomeAbout.astro";
 import HomeBusiness from "@components/HomeBusiness.astro";
 import HomeNews from "@components/HomeNews.astro";
@@ -15,11 +15,11 @@ import HomeRecruit from "@components/HomeRecruit.astro";
 ---
 <html lang="ja">
 	<Head />
-	<body>
+	<body transition:animate="slide">
 		<div id="wrapper">
 			<Header />
 			<main>
-				<!-- <HomeMv client:load /> -->
+				<HomeMv client:load />
 				<HomeAbout />
 				<HomeBusiness />
 				<HomeNews />
