--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -35,4 +35,7 @@ import { ViewTransitions } from 'astro:transitions';
 	<meta property="og:image:type" content="image/jpeg" />
 	<meta name="twitter:card" content="summary_large_image" />
 	<ViewTransitions />
+	<!-- library -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
+	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 </head>
