Fixing: hydration components and others

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ import HomeRecruit from "@components/HomeRecruit.astro";
 		<div id="wrapper">
 			<Header />
 			<main>
-				<HomeMv client:load />
+				<HomeMv />
 				<HomeAbout />
 				<HomeBusiness />
 				<HomeNews />
