--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -10,9 +10,6 @@ import { ViewTransitions } from 'astro:transitions';
 // 	element
 // });
 ---
-<!-- <script>
-	console.log(allPosts);
-</script> -->
 <head>
 	<meta charset="utf-8" />
 	<meta name='robots' content='noindex, nofollow' />
@@ -28,14 +25,14 @@ import { ViewTransitions } from 'astro:transitions';
 	<meta property="og:description" content={Description} />
 	<meta property="og:url" content={Domain} />
 	<meta property="og:site_name" content={siteTitle} />
-	<meta property="article:modified_time" content="2023-08-25T00:22:31+00:00" />
+	<!-- <meta property="article:modified_time" content="2023-08-25T00:22:31+00:00" /> -->
 	<meta property="og:image" content={OGP} />
 	<meta property="og:image:width" content="1200" />
 	<meta property="og:image:height" content="630" />
 	<meta property="og:image:type" content="image/jpeg" />
 	<meta name="twitter:card" content="summary_large_image" />
-	<ViewTransitions />
 	<!-- library -->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
-	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+	<ViewTransitions />
+	<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
+	<script is:inline src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script> -->
 </head>
