--- a/src/components/HomeMv.astro
+++ b/src/components/HomeMv.astro
@@ -72,14 +72,18 @@ const MvImages = [
 	</div>
 </div>
 <script>
-const swiperMv = new Swiper("#home-mv-slider .swiper", {
-  loop: true,
-  speed: 1000,
-	effect: "fade",
-  autoplay: {
-    delay: 2000,
-  },
-});
+import Swiper from "swiper";
+SwiperSlide();
+function SwiperSlide() {
+  const swiperMv = new Swiper("#home-mv-slider .swiper", {
+    loop: true,
+    speed: 1000,
+    effect: "fade",
+    autoplay: {
+      delay: 2000,
+    },
+  });
+}
 </script>
 <style>
 .home {
