--- a/src/components/HomeMv.astro
+++ b/src/components/HomeMv.astro
@@ -63,10 +63,7 @@ const MvImages = [
 				テストコピーテストコピー<br>
 				テストコピー<br>
 			</p>
-			<h2 class="ttl">
-				未来に、<br>
-				<span class="zenkaku">｢紡ぐ」</span>しごと。
-			</h2>
+			<h2 class="ttl">未来に、<br><span class="zenkaku">｢紡ぐ」</span>しごと。</h2>
 		</div>
 		<a href="#home-about" class="scroll">scroll</a>
 	</div>
