--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -217,7 +217,7 @@ import logo from '../images/common/logo_01.svg';
 	width: 30px;
 	height: 30px;
 	cursor: pointer;
-	background: url(../images/common/bg_circle_03.svg) center / 30px no-repeat;
+	/* background: url(../images/common/bg_circle_03.svg) center / 30px no-repeat; */
 }
 
 #btn-hamburger span {
@@ -312,44 +312,5 @@ import logo from '../images/common/logo_01.svg';
 
 #sp-menu .info-area .address {
 	font-size: 1.4rem;
-}
-
-/* sp-menu */
-#menu-sp-nav .menu-item a {
-	display: block;
-	width: 100%;
-	line-height: 1.4;
-}
-
-#menu-sp-nav>.menu-item+.menu-item {
-	margin-top: 25px;
-}
-
-#menu-sp-nav .menu-item .en {
-	font-family: var(--inter);
-	font-weight: var(--bold);
-	font-size: 3.2rem;
-	text-transform: uppercase;
-}
-
-#menu-sp-nav .menu-item .ja {
-	font-size: 1.3rem;
-	font-family: var(--shippori);
-}
-
-#menu-sp-nav .sub-menu {
-	position: relative;
-	margin-top: 25px;
-	margin-left: 20px;
-	padding-left: 20px;
-	border-left: 1px solid var(--gray);
-}
-
-#menu-sp-nav .sub-menu .menu-item {
-	font-size: 2rem;
-}
-
-#menu-sp-nav .sub-menu .menu-item+.menu-item {
-	margin-top: 20px;
 }
 </style>
